correct spacing, and more styling

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,7 +6,7 @@
   left: 0;
   font-size: 10em;
   text-align: center;
-  background-image: url("http://designrfix.com/wp-content/uploads/2013/01/Patterns-free-2013-jan-8.jpg");
+  // background-image: url("http://designrfix.com/wp-content/uploads/2013/01/Patterns-free-2013-jan-8.jpg");
   color: white;
 }
 
